--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -9,12 +9,14 @@
   }
 }
 
-.map-container {
-  padding: 0;
-  margin-top: 60px;
-  width:100%;
-  height:93.6%;
-  position: absolute;
+@media only screen and (min-width:776px) {
+  .map-container {
+    padding: 0;
+    margin-top: 60px;
+    width:100%;
+    height:93.6%;
+    position: absolute;
+  }
 }
 
 .loading {
