--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -4,5 +4,6 @@
     <app-map (cashiersList)="updateCashierList($event)"></app-map>
     <!--<app-searchbar class="overlaySearchBar"></app-searchbar>-->
     <app-radio-slider class="overlaySlider"></app-radio-slider>
+    <app-float-button></app-float-button>
 </div>
 
