--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -4,7 +4,6 @@
   width: 100%;
   background: url("../../../assets/img/fondo-proyecto.jpg") no-repeat center
     center;
-  z-index: 1;
 }
 
 .container {
@@ -15,19 +14,16 @@
   width: 100%;
 }
 
-.window {
-  margin-top: 30px;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
 .form {
-  width: 20%;
+  width: 30%;
 }
 
-.btn {
-  width: 100%;
+.row {
+  justify-content: space-around;
+}
+
+.btn2 {
+  width: 40%;
   background-color: #005540;
   color: white;
 }
@@ -50,14 +46,10 @@
   }
 
   .form {
-    width: 60%;
-    height: 100%;
+    width: 70%;
   }
 
-  .window {
-    height: 94%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  .btn2{
+    width: 40%;
   }
 }
