searchBar integrated in map view

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -2,8 +2,7 @@
 <div class="main">
     <app-navbar [cashierList]="cashierList"></app-navbar>
     <app-map (cashiersList)="updateCashierList($event)"></app-map>
-    <!--<app-searchbar class="overlaySearchBar"></app-searchbar>-->
+    <app-searchbar class="overlaySearchBar"></app-searchbar>
     <app-radio-slider class="overlaySlider"></app-radio-slider>
     <app-float-button></app-float-button>
 </div>
-
