--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -2,7 +2,8 @@
   <div class="container-fluid">
     <div class="searchbar">
       <form (ngSubmit)="onSubmit()">
-        <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl" [(ngModel)]="street" name="searchInput">
+        <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}" 
+                [formControl]="streetControl" [(ngModel)]="street" name="searchInput">
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
             {{ street }}
@@ -13,6 +14,5 @@
         </button>
       </form>
     </div>
-    <app-details class="details"></app-details>
   </div>
 </nav>
