--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,7 +23,7 @@
               />
             </svg>
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <input
               [class.redInput]="
                 this.formRegister.get('dni')?.invalid &&
@@ -38,6 +38,27 @@
               maxlength="9"
               minlength="9"
             />
+            <span *ngIf="showDniInfo" id="dni" style="font-size: 14px">{{
+              'dniInfo' | translate
+            }}</span>
+          </div>
+          <div class="col-1">
+            <svg
+              (click)="showInfo('dni')"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-info-circle"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+              />
+              <path
+                d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+              />
+            </svg>
           </div>
         </div>
         <div class="row mb-3">
@@ -56,7 +77,7 @@
               <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
             </svg>
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <div class="input-group mb-3">
               <input
                 [class.redInput]="
@@ -112,6 +133,30 @@
                 </svg>
               </div>
             </div>
+            <span
+              *ngIf="showPasswordInfo"
+              id="password"
+              style="font-size: 14px"
+              >{{ 'passwordInfo' | translate }}</span
+            >
+          </div>
+          <div class="col-1">
+            <svg
+              (click)="showInfo('password')"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-info-circle"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+              />
+              <path
+                d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+              />
+            </svg>
           </div>
         </div>
         <div class="row mb-3">
@@ -139,7 +184,7 @@
               />
             </svg>
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <input
               [class.redInput]="
                 this.formRegister.get('account')?.invalid &&
@@ -152,6 +197,30 @@
               type="text"
               class="form-control"
             />
+            <span
+              *ngIf="showAccountInfo"
+              id="account"
+              style="font-size: 14px"
+              >{{ 'accountInfo' | translate }}</span
+            >
+          </div>
+          <div class="col-1">
+            <svg
+              (click)="showInfo('account')"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-info-circle"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+              />
+              <path
+                d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+              />
+            </svg>
           </div>
         </div>
         <div class="row mb-3">
@@ -169,7 +238,7 @@
               />
             </svg>
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <input
               [class.redInput]="
                 this.formRegister.get('email')?.invalid &&
@@ -181,7 +250,27 @@
               placeholder="{{ 'email' | translate }}"
               type="email"
               class="form-control"
-            />
+            /><span *ngIf="showMailInfo" id="mail" style="font-size: 14px">{{
+              'mailInfo' | translate
+            }}</span>
+          </div>
+          <div class="col-1">
+            <svg
+              (click)="showInfo('mail')"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-info-circle"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+              />
+              <path
+                d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+              />
+            </svg>
           </div>
         </div>
         <div class="row mb-3">
