--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,10 +1,11 @@
 .searchbar{
     border-radius: 10px;
     border: 2px solid #005442;
-    position: relative;
+    position: absolute;
     top: 70px;
     left: 10px;
-    background-color: rgb(245, 250, 255);
+    background-color: #fff;
+    z-index: 1000;
 }
 
 .searchButton{
@@ -15,7 +16,7 @@
     border-width: 0 1px 0 0;
     border-color: #005442;
     border-radius: 0%;
-    background-color: rgb(245, 250, 255);
+    background-color: #fff;
     padding: 1px 5px;
     margin: 5px 0 5px 0;
 }
@@ -37,21 +38,11 @@
     margin-bottom: 4px;
 }
 
-.details{
-    background-color: rgba(240, 248, 255, 0.653);
-}
-
-.details:active{
-    background-color: #005442;
-}
-
-.nav{
-    box-shadow: rgb(190, 190, 190) 1px 1px 3px;
-    background-color: rgba(240, 248, 255, 0.653);
-}
-
-@media only screen and (min-width: 2550px){
-    .searchInput{
-        padding: 0px 40px;
+@media only screen and (max-width:484px) {
+    .searchbar { 
+        left: 0;
+        right: 0;
+        margin: auto;    
+        width: fit-content;
     }
 }
