--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,7 +1,9 @@
 <div class="empty" *ngIf="!cashiersList?.length">{{ "noResults" | translate }}</div>
 <div class="card mb-2 border border-2 border-primary" *ngFor="let cashier of cashiersList">
   <ng-template [ngIf]="cashier.photo != null" [ngIfElse]="notImage">
-    <img src="" class="card-img-top" alt="imagen de cajero" />
+    <div class="image">
+      <img [src]="decodeImg(cashier.photo)" class="card-img-top" alt="imagen de cajero"/>
+    </div>
   </ng-template>
   <ng-template #notImage>
     <div class="image">
