--- a/src/app/components/modal-transaction/modal-transaction.component.html
+++ b/src/app/components/modal-transaction/modal-transaction.component.html
@@ -6,7 +6,16 @@
                 <button type="button" class="btn-close" [attr.data-bs-dismiss]="id" aria-label="Close" (click)="close()"></button>
             </div>
             <div class="modal-body body">
-                <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='./assets/icons/image-not-found.png'" width="200px" height="200px" style="margin: auto;">
+                <ng-template [ngIf]="cashier != null" [ngIfElse]="notImage">
+                    <img *ngIf="cashier.photo != null; else notPhoto" [src]="decodeImg(cashier.photo)" alt="Image not found"
+                            class="image">
+                    <ng-template #notPhoto>
+                        <img src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />    
+                    </ng-template>
+                </ng-template>
+                <ng-template #notImage>
+                    <img src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />
+                </ng-template>
                 <hr>
                 <div class="input-group">
                     <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [(ngModel)]="amount" required>
