--- a/src/app/components/modal-transaction/modal-transaction.component.scss
+++ b/src/app/components/modal-transaction/modal-transaction.component.scss
@@ -24,3 +24,9 @@ h1 {
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(6, 156, 111, 0.6);
     }
   }
+
+.image {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
